--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "browser-sync": "^2.11.1",
     "del": "^2.2.0",
     "gulp": "^3.9.0",
+    "gulp-develop-server": "^0.5.1",
+    "gulp-jshint": "^2.0.0",
     "gulp-livereload": "^3.8.0",
     "gulp-minify-css": "^1.2.4",
     "gulp-minify-html": "^1.0.6",
